# bookshelf-logger

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
bookshelflogger/: Cargo.toml  README.md  package-lock.json  package.json
bookshelflogger/src/: lib.rs
src/: lib.rs  logger.rs  main.rs
